--- a/AFJavaExample/nbproject/project.properties
+++ b/AFJavaExample/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.commons-io-2.4.jar=C:\\Program Files\\Java\\jdk1.7.0_80\\lib\\commons-io-2.4.jar
 file.reference.json-20140107.jar=C:\\Program Files\\Java\\jdk1.7.0_80\\lib\\json-20140107.jar
 file.reference.mysql-connector-java-5.1.36-bin.jar=C:\\Program Files\\Java\\jdk1.7.0_80\\lib\\mysql-connector-java-5.1.36-bin.jar
 includes=**
@@ -40,7 +41,8 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${file.reference.json-20140107.jar}:\
-    ${file.reference.mysql-connector-java-5.1.36-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.36-bin.jar}:\
+    ${file.reference.commons-io-2.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
